--- a/gnjm-dharmic-school/package.json
+++ b/gnjm-dharmic-school/package.json
@@ -21,5 +21,11 @@
         "react-dom": "^18.2.0",
         "tailwindcss": "^3.2.1",
         "vite": "^7.0.7"
+    },
+    "dependencies": {
+        "@tanstack/react-table": "^8.21.3",
+        "ag-grid-community": "^35.0.0",
+        "ag-grid-react": "^35.0.0",
+        "react-hot-toast": "^2.6.0"
     }
 }
