--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "@tanstack/react-table": "^8.21.3",
         "ag-grid-community": "^35.0.0",
         "ag-grid-react": "^35.0.0",
-        "react-hot-toast": "^2.6.0"
+        "react-hot-toast": "^2.6.0",
+        "react-select": "^5.10.2"
     }
 }
